--- a/dashboard/src/css/MsmeManageProduct.css
+++ b/dashboard/src/css/MsmeManageProduct.css
@@ -182,7 +182,7 @@
   border: 1px solid #e9ecef;
   position: relative;
   display: flex;
-  min-height: 250px;
+  height: 300px;
 }
 
 .msme-manage-product-card:hover {
@@ -228,13 +228,16 @@
 }
 
 .msme-manage-product-image {
-  width: 350px;
-  height: 100%;
-  min-height: 250px;
+  width: 300px;
+  height: 300px;
   object-fit: cover;
   object-position: center;
   border-right: 1px solid #e9ecef;
   flex-shrink: 0;
+  border-radius: 8px 0 0 8px;
+  background-color: #f8f9fa;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: crisp-edges;
 }
 
 .msme-manage-product-info {
@@ -585,14 +588,16 @@
 
   .msme-manage-product-card {
     flex-direction: column;
-    min-height: auto;
+    height: auto;
+    min-height: 350px;
   }
 
   .msme-manage-product-image {
     width: 100%;
-    height: 180px;
+    height: 200px;
     border-right: none;
     border-bottom: 1px solid #e9ecef;
+    border-radius: 8px 8px 0 0;
   }
 
   .msme-manage-product-info {
@@ -639,7 +644,7 @@
   }
 
   .msme-manage-product-image {
-    height: 160px;
+    height: 180px;
   }
 
   .msme-manage-product-info {
@@ -711,7 +716,7 @@
   }
 
   .msme-manage-product-image {
-    height: 160px;
+    height: 170px;
   }
 }
 
